# laboratory3_autumn2025

./: CMakeLists.txt  consistent_container.cpp  consistent_container.h  containers.h  elementdoublelinkedlist.cpp  elementdoublelinkedlist.h  elementmonolinkedlist.cpp  elementmonolinkedlist.h  functions.cpp  functions.h  list_type_container.cpp  list_type_container.h  main.cpp  mono_linked_list_type_container.cpp  mono_linked_list_type_container.h  newcontainer.h  voidprint.cpp  voidprint.h
.github/workflow/: cicd.yml
.github/workflows/: cicd.yml
