cmake_minimum_required(VERSION 3.10.0)
project(laboratory3 VERSION 0.1.0 LANGUAGES C CXX)

add_executable(
               laboratory3 
               main.cpp 

               voidprint.h 
               voidprint.cpp 
               elementdoublelinkedlist.h 
               elementdoublelinkedlist.cpp
               
               elementmonolinkedlist.h
               elementmonolinkedlist.cpp
               
               functions.h
               functions.cpp

               newcontainer.h

               containers.h

               consistent_container.h
               consistent_container.cpp

               list_type_container.h
               list_type_container.cpp
               
               )

